# puppet-master

./: puppet-master.cabal
app/: Main.hs
org/: puppet-master.cabal
src/Puppetry/: Slave.hs  WebSocketServer.hs
src/main/: Main.hs
src/main/Puppetry/: Slave.hs  WebSocketServer.hs
