name:                puppet-master
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ej-blot-til-lyst/puppet-master#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Puppetry.Slave
                       Puppetry.WebSocketServer
  build-depends:       base >= 4.7 && < 5
                     , text
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
                     , http-types
                     , safe
                     , scotty
                     , blaze-html
                     , containers
  default-language:    Haskell2010



executable puppet-master-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , puppet-master
                     , text
  default-language:    Haskell2010
